kubernetes/llm/components/litellm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: litellm-svc
  namespace: llm
  labels:
    app: litellm
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: litellm
